--- a/package.json
+++ b/package.json
@@ -14,17 +14,19 @@
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.4",
     "expo": "~48.0.9",
+    "expo-application": "~5.1.1",
     "expo-auth-session": "~4.0.3",
+    "expo-crypto": "~12.2.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "expo-web-browser": "~12.1.1",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-camera": "^4.2.1",
+    "react-native-paper": "^5.6.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
-    "expo-crypto": "~12.2.1",
-    "expo-web-browser": "~12.1.1",
-    "expo-application": "~5.1.1"
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
