--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~48.0.9",
     "expo-application": "~5.1.1",
     "expo-auth-session": "~4.0.3",
+    "expo-barcode-scanner": "^12.3.2",
     "expo-crypto": "~12.2.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
