--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native": "0.71.6",
     "react-native-camera": "^4.2.1",
     "react-native-paper": "^5.6.0",
+    "react-native-print": "^0.11.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-vector-icons": "^9.2.0"
